--- a/A-Simple-Calculator-App-With-Django-and-JavaScript/templates/calcu_app/index.html
+++ b/A-Simple-Calculator-App-With-Django-and-JavaScript/templates/calcu_app/index.html
@@ -20,7 +20,7 @@
 <body>
 	<div class="container my-3">
 		<div class="jumbotron">
-			<h1 class="display-6 text-warning" style="margin-top: -5%; text-align: center;">A Simple Calculator Web Application by OSELABS </h1>
+			<h1 class="display-6 text-warning" style="margin-top: -5%; text-align: center;">A Simple Calculator by OSELabs </h1>
 			<p class="lead text-center text-success" style="margin-bottom: -5%;">This is a simple calculator application developed by Md. Omar Faruk</p>
 		</div>
 
