--- a/A-Simple-Calculator-App-With-Django-and-JavaScript/templates/calcu_app/index.html
+++ b/A-Simple-Calculator-App-With-Django-and-JavaScript/templates/calcu_app/index.html
@@ -14,13 +14,13 @@
 </head>
 <style>
 	.jumbotron{
-		background: linear-gradient(120deg,#2C3E50, #08488d);
+		background: linear-gradient(120deg,#7CFFCB, #08488d);
 	}
 </style>
 <body>
 	<div class="container my-3">
 		<div class="jumbotron">
-			<h1 class="display-6 text-warning" style="margin-top: -5%; text-align: center;">A Simple Calculator by OSELabs </h1>
+			<h1 class="display-6 text-warning" style="margin-top: -5%; text-align: center;">A Simple Calculator by Google </h1>
 			<p class="lead text-center text-success" style="margin-bottom: -5%;">This is a simple calculator application developed by Md. Omar Faruk</p>
 		</div>
 
